syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option go_package = "github.com/go/oauth2-server/proto/user";


service UserService {
    rpc Create(User) returns (User);
    rpc Delete(UserIdRequest) returns (google.protobuf.Empty);
    rpc Update(User) returns (User);
    rpc Get(UserIdRequest) returns (User);
    rpc List(ListRequest) returns (ListResponse);
    rpc Login(LoginRequest) returns (User);
    rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
}

message UserIdRequest {
    int64  user_id = 1;
}

message ListRequest {

}

message ListResponse {

}

message LoginRequest {

}

message ChangePasswordRequest {

}

message User {
    int64 id = 1;
    string name = 2;
    string gender = 15;
    string email = 3;
    string password = 4;
    string phone_number = 5;
    string avatar = 6;
    int32  status = 7;
    string department = 8;
    string position = 9;
    string address = 10;
    string level = 11;
    string last_login_at = 12;
    string created_at = 13;
    string updated_at = 14;
}